--- a/CriminalIntent/src/main/res/values/strings.xml
+++ b/CriminalIntent/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CrimeFragment</string>
+    <string name="app_name">CriminalIntent</string>
 
     <string name="crime_title_hint">범죄의 제목을 입력하세요.</string>
     <string name="crime_title_label">제목</string>
